THRIFT-2683 c_glib: Seg fault when deserializing a map with typedef'd keys

Patch: Simon South